# Object-viewer

./: .gitignore  CMakeLists.txt
impl/: alloc.c  dynlist.c  strings.c
include/: alloc.h  dynlist.h  opengl.h  strings.h  types.h
src/: main.c
